--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
